Fix compilation after 7.2.1 upgrade
Fix toolchain resolution error when building android_tools